--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,17 @@
 # Site settings
-title: Your awesome title
+title: Quilombo Driven Development
 email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Un poquito de Javascript sin romper nada" 
 baseurl: ""
-url: "http://yourdomain.com"
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://quilombodd.herokuapp.com/"
+twitter_username: alancampora
+github_username:  alancampora
 
 # Build settings
 markdown: kramdown
 permalink: pretty
 gems: ['kramdown']
 exclude: ['config.ru', 'Gemfile', 'Gemfile.lock', 'vendor', 'Procfile', 'Rakefile']
+
+source: ./
+destination: ./dist/
