--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,24 @@
 exclude:  [ Gemfile, Gemfile.lock, Procfile, vendor]
 sass:
   style: compressed
+defaults:
+    -
+     scope:
+         path: ""
+     values:
+         lang: es
+         base-url: "/"
+    -
+     scope:
+         path: en
+     values:
+         lang: en
+         base-url: "/en/"
+
+translate:
+    home: 
+        en: "Home"
+        es: "Inicio"
+    about:
+        en: "About"
+        es: "Acerca"
