--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ defaults:
          path: en
      values:
          lang: en
-         base-url: "/en/"
+         base-url: "/en"
 
 translate:
     home: 
