[ADD] Comments string

--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,6 @@ translate:
     glosarry:
         en: "Glosarry"
         es: "Glosario"
+    comments:
+        en: "Comments"
+        es: "Comentarios"
