[ADD] comment input title

--- a/_config.yml
+++ b/_config.yml
@@ -31,3 +31,6 @@ translate:
     comments:
         en: "Comments"
         es: "Comentarios"
+    commentInput: 
+        en: "New comment" 
+        es: "Comentario nuevo"
